--- a/index.html
+++ b/index.html
@@ -1065,11 +1065,11 @@
 </head>
 <body>
   <header>
-    <h1>Gaming Zone – Latest Articles</h1>
+    <h1>PlayZone – Latest Articles</h1>
   </header>  <div class="container">
     <!-- Article 1 -->
     <div class="article">
-      <img src="minecraft.jpg" alt="Minecraft Mods">
+      <img src="news/mine.jpg" alt="Minecraft Mods">
       <h2>Top 10 Minecraft Mods Every Gamer Must Try (2025)</h2>
       <p>Minecraft is one of the most creative games ever made, but what makes it even better are mods.</p>
       <div class="extra-content">
@@ -1130,7 +1130,7 @@
       <button class="read-more">Read More</button>
     </div><!-- Article 2 -->
 <div class="article">
-  <img src="clashofclans.jpg" alt="Clash of Clans Base">
+  <img src="news/clash.png" alt="Clash of Clans Base">
   <h2>How to Build the Best Base in Clash of Clans (2025 Guide)</h2>
   <p>Your base is your biggest defense in Clash of Clans.</p>
   <div class="extra-content">
@@ -1206,7 +1206,7 @@ The best Clash of Clans base is one that’s balanced, updated, and customized. 
 
 <!-- Article 3 -->
 <div class="article">
-  <img src="codm.jpg" alt="Call of Duty Mobile Loadouts">
+  <img src="news/cod.webp" alt="Call of Duty Mobile Loadouts">
   <h2>Call of Duty Mobile – Best Loadouts for Ranked Mode (2025)</h2>
   <p>Want to dominate COD Mobile ranked matches? These are the best loadouts for different playstyles:</p>
   <div class="extra-content">
@@ -1286,7 +1286,7 @@ The right loadout depends on your playstyle and map. Master at least two loadout
 
 <!-- Article 4 -->
 <div class="article">
-  <img src="gtav.jpg" alt="GTA V Online Money">
+  <img src="news/gtav.jpg" alt="GTA V Online Money">
   <h2>GTA V Online – Best Ways to Make Money Fast (2025 Guide)</h2>
   <p>Money is everything in GTA Online, from buying cars to properties and businesses.</p>
   <div class="extra-content">
@@ -1399,7 +1399,7 @@ Making money fast in GTA V Online in 2025 requires smart choices and consistent 
 
 <!-- Article 5 -->
 <div class="article">
-  <img src="pubg.jpg" alt="PUBG Mobile Tips">
+  <img src="news/pubg.webp" alt="PUBG Mobile Tips">
   <h2>PUBG Mobile – Top 10 Tips to Win More Chicken Dinners</h2>
   <p>PUBG Mobile remains one of the most competitive battle royale games in 2025.</p>
   <div class="extra-content">
@@ -1500,7 +1500,7 @@ Winning in PUBG Mobile is a mix of strategy, skill, and patience. By applying th
 
 <!-- Article 6 -->
 <div class="article">
-  <img src="fortnite.jpg" alt="Fortnite Strategies">
+  <img src="news/fort.webp" alt="Fortnite Strategies">
   <h2>Fortnite – Best Combat Strategies for Beginners</h2>
   <p>Fortnite is unique because of its combination of shooting and building mechanics.</p>
   <div class="extra-content">
@@ -1624,7 +1624,7 @@ Ready to level up your Fortnite game? Try these tips and watch your skills soar!
 
 <!-- Article 8 -->
 <div class="article">
-  <img src="freefire.jpg" alt="Free Fire MAX Tips">
+  <img src="news/free.webp" alt="Free Fire MAX Tips">
   <h2>Free Fire MAX – Pro Tips to Improve Your KD Ratio</h2>
   <p>Free Fire MAX is all about fast-paced action and survival.</p>
   <div class="extra-content">
@@ -1737,7 +1737,7 @@ Improving your KD ratio in Free Fire MAX is about smart choices, consistent prac
 
 <!-- Article 9 -->
 <div class="article">
-  <img src="eldenring.jpg" alt="Elden Ring Builds">
+  <img src="news/elden.webp" alt="Elden Ring Builds">
   <h2>Elden Ring – Best Builds for Beginners in 2025</h2>
   <p>Elden Ring offers countless ways to play, but some builds are easier for beginners.</p>
   <div class="extra-content">
@@ -1863,7 +1863,7 @@ No matter which path you choose, Elden Ring rewards patience and curiosity. Buil
 
 <!-- Article 10 -->
 <div class="article">
-  <img src="apexlegends.jpg" alt="Apex Legends Top Legends">
+  <img src="news/apex.webp" alt="Apex Legends Top Legends">
   <h2>Apex Legends – Top Legends Ranked for Competitive Play</h2>
   <p>Apex Legends has a roster of diverse characters with unique abilities.</p>
   <div class="extra-content">
@@ -1996,7 +1996,7 @@ Zone control meta? Consider Caustic or Bangalore if you excel with area denial.<
 
 <!-- Article 11 -->
 <div class="article">
-  <img src="amongus.jpg" alt="Among Us Strategies">
+  <img src="news/among.webp" alt="Among Us Strategies">
   <h2>Among Us – Advanced Strategies to Outsmart Crewmates</h2>
   <p>Among Us is simple to learn but hard to master as an Impostor.</p>
   <div class="extra-content">
@@ -2147,7 +2147,7 @@ Whether you’re a cunning Impostor or a detective-minded Crewmate, applying the
 
 <!-- Article 12 -->
 <div class="article">
-  <img src="witcher3.jpg" alt="Witcher 3 Mods">
+  <img src="news/witcher.webp" alt="Witcher 3 Mods">
   <h2>The Witcher 3 – Essential Mods for the Ultimate Experience</h2>
   <p>The Witcher 3 is already incredible, but mods can enhance it even further.</p>
   <div class="extra-content">
@@ -2263,7 +2263,7 @@ No matter why you return to The Witcher 3—be it visuals, immersion, gameplay, 
 
 <!-- Article 13 -->
 <div class="article">
-  <img src="valorant.jpg" alt="Valorant Agents">
+  <img src="news/valorant.webp" alt="Valorant Agents">
   <h2>Ranked Match Valorant – Best Agents for matches</h2>
   <p>Picking the right agent in Valorant can greatly affect your competitive performance.</p>
   <div class="extra-content">
@@ -2405,7 +2405,7 @@ Prefer flexible role coverage? Stick with Omen, Astra, or Killjoy.</i></p>
 
 <!-- Article 14 -->
 <div class="article">
-  <img src="minecraft.jpg" alt="Minecraft Survival">
+  <img src="news/mine.jpg" alt="Minecraft Survival">
   <h2>Minecraft – Survival Tips for Beginners</h2>
   <p>Minecraft survival mode is exciting but can be tough for new players.</p>
   <div class="extra-content">
@@ -2518,7 +2518,7 @@ Happy mining and stay safe out there!</i></p>
 
 <!-- Article 15 -->
 <div class="article">
-  <img src="fortnite.jpg" alt="Fortnite Building">
+  <img src="news/fort.webp" alt="Fortnite Building">
   <h2>Fortnite – Building Tricks to Win More Matches</h2>
   <p>Building is Fortnite’s unique mechanic that separates beginners from pros.</p>
   <div class="extra-content">
@@ -2671,7 +2671,7 @@ Stick with it, train in Creative, and keep learning. Your next Victory Royale co
 
 <!-- Article 16 -->
 <div class="article">
-  <img src="pubgpc.jpg" alt="PUBG PC Settings">
+  <img src="news/pubg.webp" alt="PUBG PC Settings">
   <h2>PUBG PC – Best Settings for Smooth Gameplay</h2>
   <p>Optimizing your settings in PUBG can boost both performance and gameplay.</p>
   <div class="extra-content">
@@ -2800,7 +2800,7 @@ Test out the settings above, tweak based on your system, and get ready to drop i
 
 <!-- Article 17 -->
 <div class="article">
-  <img src="codmw2.jpg" alt="COD Modern Warfare 2">
+  <img src="cod.webp" alt="COD Modern Warfare 2">
   <h2>Call of Duty Modern Warfare 2 – Top Weapons Ranked</h2>
   <p>COD MW2 offers a wide arsenal, but some weapons dominate the meta.</p>
   <div class="extra-content">
@@ -2922,7 +2922,7 @@ Precision & Sniping: SP‑R 208 and Signal 50 are your go-to for clean one-s
 
 <!-- Article 18 -->
 <div class="article">
-  <img src="fortnite.jpg" alt="Fortnite Building Tips">
+  <img src="news/fort.webp" alt="Fortnite Building Tips">
   <h2>Fortnite – Building Tips to Dominate in 2025</h2>
   <p>Fortnite isn’t just about shooting — building quickly is what separates pros from casuals.</p>
   <div class="extra-content">
@@ -4858,6 +4858,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
 
     
 </script>
+
 
 
 
