--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
         <div class="hero-content">
             <h1>PLAYZONE GAMING HUB</h1>
             <p>Your ultimate destination for premium gaming experiences</p>
-            <p class="typed-text">DOWNLOAD FREE GAMES.</p>
+            <p class="typed-text">TRY MINIGAMES AND RELAX.</p>
             <a href="minig.html" class="hero-btn">Play Mini Games</a>
         </div>
     </section>
@@ -4858,6 +4858,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
 
     
 </script>
+
 
 
 
