--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async="async" data-cfasync="false" src="//pl27928070.effectivegatecpm.com/428ab928a941c02c84774811255931cb/invoke.js"></script>
+   <div id="container-428ab928a941c02c84774811255931cb"></div>
     <script src="//code.tidio.co/xzhfajh4htmoye2lxahlyhg9miqjbnhh.js" async></script>
     <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <meta charset="UTF-8">
@@ -4858,6 +4860,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
 
     
 </script>
+
 
 
 
