--- a/news.html
+++ b/news.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async="async" data-cfasync="false" src="//pl27928070.effectivegatecpm.com/428ab928a941c02c84774811255931cb/invoke.js"></script>
+    <div id="container-428ab928a941c02c84774811255931cb"></div>
     <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7798465150283735"
      crossorigin="anonymous"></script>
@@ -1024,3 +1026,4 @@ Ghost of Yōtei Updates - July 2025</p>
                 </div>
                 <h2 class="text-2xl md:text-3xl font-bold mb-2">Stay Updated with Playzonejk</h2>
                 <p class="text-gray
+
