--- a/index.html
+++ b/index.html
@@ -869,6 +869,9 @@
     </style>
 </head>
 <body>
+    <script async src="https://cse.google.com/cse.js?cx=35dc8858866f64ee1">
+    </script>
+<div class="gcse-search"></div>
     <!-- Cosmic Background -->
     <div class="cosmic-bg"></div>
     <div class="stars" id="stars"></div>
@@ -4860,6 +4863,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
 
     
 </script>
+
 
 
 
