--- a/index.html
+++ b/index.html
@@ -1069,6 +1069,146 @@
   <header>
     <h1>PlayZone – Latest Articles</h1>
   </header>  <div class="container">
+      <div class="article">
+      <img src="re.webp" alt="RE">
+      <h2>RE9 realeased</h2>
+      <p>resident evil is one of the best horror frenchise for gamers.</p>
+      <div class="extra-content">
+        <ul>
+          <li><b>Optifine</b> – Boosts FPS & improves visuals.</li>
+          <li><b>Biomes O’ Plenty</b> – 80+ new biomes.</li>
+          <li><b>JourneyMap</b> – Never get lost again.</li>
+          <li><b>Twilight Forest</b> – New magical dimension.</li>
+        </ul>
+        <p><i>Resident Evil: Requiem (often referred to simply as Resident Evil 9) is the upcoming mainline entry in Capcom’s legendary survival horror franchise. It’s set to launch on February 27, 2026 for PlayStation 5, Xbox Series X/S, Nintendo Switch 2, and PC.
+
+Requiem promises to push the series into a new era of survival horror, blending intense psychological fear with cinematic action and classic Resident Evil mechanics.
+
+🔥 What’s Officially Confirmed So Far
+🧟 Release & Platforms
+
+Title: Resident Evil: Requiem (Resident Evil 9)
+
+Release Date: February 27, 2026
+
+Platforms: PS5, Xbox Series X/S, Nintendo Switch 2, PC
+
+Genre: Survival Horror
+
+Developer / Publisher: Capcom
+
+👩‍💼 Protagonists
+
+Grace Ashcroft – A new playable lead: an FBI technical analyst investigating bizarre deaths tied to her past and Resident Evil lore.
+
+Leon S. Kennedy – A returning fan-favorite whose role is confirmed in official materials and remains significant, with different gameplay style and pacing from Grace.
+
+Capcom has confirmed that Requiem will let you switch between Grace and Leon, each with distinct mechanics: Grace’s sections lean into tense survival horror, while Leon’s blend exploration with combat and action.
+
+🎮 Gameplay Features (Official)
+
+First- and Third-Person Toggle: New to the franchise for flexibility in immersion and combat.
+
+Rich Character-Driven Narrative: Ties into Resident Evil Outbreak through Grace’s connections.
+
+🧠 Rumored Story & Characters (Use With Caution)
+
+⚠️ Much of this remains unconfirmed and based on community leaks and speculation. Treat with a grain of salt until Capcom announces them officially.
+
+👥 Possible Returning Characters
+
+Jill Valentine – Rumored playable or significant role in some leaks.
+
+Chris Redfield & Barry Burton – Reportedly in supporting roles via communications.
+
+Rosemary Winters – Rumors suggest she might reappear, potentially tied to special content (like Deluxe Edition additions).
+
+🦠 Villains & Enemies (Unconfirmed)
+
+Mr. Simon – Alleged main antagonist involved in bioweapon production.
+
+Stalker-type enemies (e.g., Goatman) and evolved zombies that may use melee weapons.
+
+Possible hallucination mechanics tied to biological infection.
+
+📍 Setting & Story Theory
+
+Leaks hint at:
+
+Investigations across distinct biomes like forests, hospitals, labs, and temples.
+
+Some storylines tied to the Megamycete / mold saga from previous games.
+
+Note: These elements are widely circulated in the community but not confirmed by Capcom.
+
+🎮 Gameplay: What to Expect
+💀 Core Experience
+
+Resident Evil: Requiem is shaping up to be a hybrid between intense survival horror and cinematic action:
+
+Survival Elements:
+
+Resource scarcity
+
+Tense enemy encounters
+
+Hide-and-escape sections with Grace
+
+Action Elements:
+
+Leon’s sections emphasize combat and strategic encounters
+
+Player choice in approach may shift pacing
+
+🔄 Perspective System
+
+You can toggle between first- and third-person perspectives, letting players switch to suit the situation — horror exploration or tactical combat.
+
+👍 Pros — Why Fans Are Excited
+
+✔️ New Narrative Direction
+Grace Ashcroft offers a fresh protagonist with emotional depth, tied to franchise lore.
+
+✔️ Rich Graphics & Engine
+Built in the RE Engine, the game looks visually striking and capable of blending atmospheric horror with detailed action scenes.
+
+✔️ Dual Gameplay Styles
+Switching between tense survival horror and action-oriented Leon sections could satisfy a wide range of players.
+
+✔️ Nostalgia & New Blood
+Mixing veterans like Leon with new faces could bridge generations of fans.
+
+👎 Cons & Concerns
+
+⚠️ Rumor-Heavy Info So Far
+Many details circulating online are unverified leaks, not official confirmations.
+
+⚠️ Marketing Silence
+Some community members feel Capcom’s promotional rollout has been sparse, leading to frustration over clarity and gameplay reveals.
+
+⚠️ Balancing Gameplay Styles
+Fans have debated whether switching between slow-paced horror and action-heavy sections (Grace vs. Leon) could disrupt the game’s flow.
+
+🧠 Tips for Players (When It Releases)
+🎯 General Strategy
+
+Conserve Ammo: Classic Resident Evil survival — don’t waste bullets early.
+
+Explore Thoroughly: Items and puzzle clues are hidden everywhere.
+
+Use Both Perspectives: First-person for immersion; third-person for tactical awareness.
+
+👣 Combat Tips
+
+Leon’s Scenes: Focus on dodging and movement — expect action-heavy encounters.
+
+Grace’s Segments: Stealth and evasion will often be superior to fighting.
+
+🧩 Puzzle & Resource Management
+
+Expect classic Resident Evil puzzles that matter — logic and exploration will be rewarded.</i></p>
+      </div>
+      <button class="read-more">Read More</button>
     <!-- Article 1 -->
     <div class="article">
       <img src="news/mine.jpg" alt="Minecraft Mods">
@@ -4860,6 +5000,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
 
     
 </script>
+
 
 
 
