--- a/news.html
+++ b/news.html
@@ -254,6 +254,61 @@
             <div class="news-card glow-effect">
                 <div class="grid md:grid-cols-2">
                     <div class="overflow-hidden">
+                        <img src="re.webp" alt="Baldur's Gate 3 gameplay screenshot showing the Dragonborn character creation screen with detailed customization options" class="w-full h-full object-cover">
+                    </div>
+                    <div class="p-6 md:p-8">
+                        <div class="flex mb-4">
+                            <span class="tag tag-pc mr-2">PC</span>
+                            <span class="tag tag-console">PS5</span>
+                            <span class="text-sm text-gray-400 ml-auto">jan 6, 2026</span>
+                        </div>
+                        <h3 class="text-2xl md:text-3xl font-bold mb-3">RE 9</h3>
+                        <p class="text-gray-300 mb-6">🧟‍♂️ New Resident Evil Requiem Demo Confirms Major Leaks
+
+Date: ~January 2026
+A recently released demo of Resident Evil Requiem — the ninth mainline game in the Resident Evil series (often called RE9) — has confirmed significant features that were previously leaked, including hints of an open-world city section in the campaign.
+
+🎮 RE9: Release Date, Trailers & Gameplay Details
+
+Updated: January 16, 2026
+Capcom’s Resident Evil Requiem is shaping up as the next major entry in the franchise with new trailers, story insights, and gameplay features being revealed ahead of its launch.
+
+🧟‍♀️ Return to Raccoon City & Protagonists
+
+Published: ~January 8, 2026
+Resident Evil Requiem will take players back to Raccoon City when it releases on February 27, 2026, featuring characters like Leon S. Kennedy and new lead Grace Ashcroft.
+
+🧠 Classic Zombies Confirmed in RE9
+
+Published: ~late January 2026
+Official gameplay reveals confirm that traditional zombies return in Resident Evil Requiem — but with updated designs, as showcased in recent Resident Evil Showcase gameplay footage.
+
+🏙️ New Trailer Suggests Open-World Elements
+
+Published: ~January 6, 2026
+A new Resident Evil Requiem trailer released via Nvidia hints that parts of the game may include open-world exploration in city environments, adding depth to the upcoming title’s structure.</p>
+                        <div class="flex justify-between items-center">
+                            <div class="flex -space-x-2">
+                                <img class="w-10 h-10 rounded-full border-2 border-purple-600" src="https://placehold.co/100" alt="Swen Vincke portrait, Larian Studios founder with beard wearing armor">
+                                <img class="w-10 h-10 rounded-full border-2 border-purple-600" src="https://placehold.co/100" alt="Neil Newbon portrait, actor who played Astarion with intense gaze">
+                            </div>
+                            <a href="https://www.playstation.com/en-in/games/resident-evil-requiem/" class="px-6 py-2 bg-gradient-to-r from-purple-600 to-blue-500 rounded-full font-medium transition hover:opacity-90">Read Full Story</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- article 2 -->
+        <section class="mb-16">
+            <h2 class="text-2xl md:text-3xl font-bold mb-8 flex items-center">
+                <span class="gradient-text">Featured Story</span>
+                <span class="ml-4 text-xs bg-pink-600 text-white px-3 py-1 rounded-full">Hot</span>
+            </h2>
+            
+            <div class="news-card glow-effect">
+                <div class="grid md:grid-cols-2">
+                    <div class="overflow-hidden">
                         <img src="news/yotei.jpg" alt="Baldur's Gate 3 gameplay screenshot showing the Dragonborn character creation screen with detailed customization options" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6 md:p-8">
@@ -1026,4 +1081,5 @@ Ghost of Yōtei Updates - July 2025</p>
                 </div>
                 <h2 class="text-2xl md:text-3xl font-bold mb-2">Stay Updated with Playzonejk</h2>
                 <p class="text-gray
+
 
