--- a/index.html
+++ b/index.html
@@ -3342,6 +3342,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
             margin-bottom: 5px;
             position: relative;
             padding-left: 20px;
+            color:black;
         }
         
         .req-specs:before {
@@ -4902,6 +4903,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
 
     
 </script>
+
 
 
 
