--- a/index.html
+++ b/index.html
@@ -4056,6 +4056,49 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
         </table>
     </div>
 
+<footer style="background:#0f0f0f; color:#ddd; padding:50px 0 20px 0; font-family:Arial, sans-serif; margin-top:60px;">
+  <div style="width:90%; max-width:1200px; margin:auto; display:flex; flex-wrap:wrap; justify-content:space-between;">
+    
+    <!-- About Section -->
+    <div style="flex:1 1 250px; margin-bottom:30px;">
+      <h3 style="color:#fff;">Playzone JK</h3>
+      <p style="font-size:14px; line-height:1.6;">
+        Playzone JK is a gaming blog providing guides, tips, setup tutorials, and gaming news. 
+        Our content is created for educational and informational purposes only.
+      </p>
+    </div>
+
+    <!-- Quick Links -->
+    <div style="flex:1 1 200px; margin-bottom:30px;">
+      <h4 style="color:#fff;">Quick Links</h4>
+      <ul style="list-style:none; padding:0; font-size:14px;">
+        <li><a href="index.html" style="color:#bbb; text-decoration:none;">Home</a></li>
+        <li><a href="about.html" style="color:#bbb; text-decoration:none;">About Us</a></li>
+        <li><a href="Contact.html" style="color:#bbb; text-decoration:none;">Contact</a></li>
+        <li><a href="Privacy.html" style="color:#bbb; text-decoration:none;">Privacy Policy</a></li>
+        <li><a href="Terms.html" style="color:#bbb; text-decoration:none;">Terms & Conditions</a></li>
+      </ul>
+    </div>
+
+    <!-- Categories -->
+    <div style="flex:1 1 200px; margin-bottom:30px;">
+      <h4 style="color:#fff;">Categories</h4>
+      <ul style="list-style:none; padding:0; font-size:14px;">
+        <li><a href="#" style="color:#bbb; text-decoration:none;">PC Games</a></li>
+        <li><a href="#" style="color:#bbb; text-decoration:none;">Android Games</a></li>
+        <li><a href="#" style="color:#bbb; text-decoration:none;">Game Setup Guides</a></li>
+        <li><a href="#" style="color:#bbb; text-decoration:none;">Gaming Tips</a></li>
+      </ul>
+    </div>
+
+  </div>
+
+  <!-- Bottom Bar -->
+  <div style="border-top:1px solid #222; margin-top:30px; padding-top:20px; text-align:center; font-size:13px; color:#888;">
+    © 2026 Playzone JK | All Rights Reserved
+  </div>
+</footer>
+
     <script>
         // Search functionality
         document.getElementById('searchInput').addEventListener('input', function() {
@@ -4103,4 +4146,5 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
         });
     });
 </script>
+
 
