--- a/index.html
+++ b/index.html
@@ -3193,17 +3193,6 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
     });
   </script></body>
 
-
-
-  <h1>🎮 Welcome to Gaming Hub</h1>
-
-    <!-- ✏️ Add more original articles below this line -->
-  </section>
-
-</body>
-
-
-
     <title>Game System Requirements</title>
     <style>
         * {
@@ -4084,10 +4073,10 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
     <div style="flex:1 1 200px; margin-bottom:30px;">
       <h4 style="color:#fff;">Categories</h4>
       <ul style="list-style:none; padding:0; font-size:14px;">
-        <li><a href="#" style="color:#bbb; text-decoration:none;">PC Games</a></li>
-        <li><a href="#" style="color:#bbb; text-decoration:none;">Android Games</a></li>
-        <li><a href="#" style="color:#bbb; text-decoration:none;">Game Setup Guides</a></li>
-        <li><a href="#" style="color:#bbb; text-decoration:none;">Gaming Tips</a></li>
+        <li><a href="https://www.epicgames.com/site/en-US/home" style="color:#bbb; text-decoration:none;">PC Games</a></li>
+        <li><a href="https://play.google.com/store/games?device=windows" style="color:#bbb; text-decoration:none;">Android Games</a></li>
+        <li><a href="guide.html" style="color:#bbb; text-decoration:none;">Game Setup Guides</a></li>
+        <li><a href="mindex.html" style="color:#bbb; text-decoration:none;">Gaming Tips</a></li>
       </ul>
     </div>
 
@@ -4146,5 +4135,6 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
         });
     });
 </script>
+
 
 
