--- a/index.html
+++ b/index.html
@@ -967,46 +967,61 @@
     
   <title>Gaming Articles</title>
 <style>
-  .container {
-  max-width: 1200px;
-  margin: 20px auto;
-  padding: 0 20px;
-  
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-}
-
-.article {
-  background: #fff;
-  padding: 15px;
-  border-radius: 10px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  transition: transform 0.3s ease;
-}
-
-.article:hover {
-  transform: translateY(-5px);
-}
-    /* Tablet */
-@media (max-width: 992px) {
-  .container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* Mobile */
-@media (max-width: 600px) {
-  .container {
-    grid-template-columns: 1fr;
-  }
-}
-  </style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #111;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    .container {
+      max-width: 100px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
+    .article {
+      background: #fff;
+      margin-bottom: 30px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .article img {
+      width: 100%;
+      border-radius: 10px;
+    }
+    .article h2 {
+      margin-top: 15px;
+      color: #333;
+    }
+    .article p, .article ul {
+      color: #555;
+    }
+    .read-more {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 15px;
+      background: #111;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    .extra-content {
+      display: none;
+      margin-top: 10px;
+    }
 </head>
 <body>
-  <header>
     <h1>PlayZone – Latest Articles</h1>
-  </header>  <div class="container">
+  <div class="container">
       <div class="article">
       <img src="re.webp" alt="RE">
       <h2>RE9 realeased</h2>
@@ -4118,6 +4133,7 @@ Whether you’re grinding Arena, trying for your first FNCS qualification, or ju
         });
     });
 </script>
+
 
 
 
