--- a/news.html
+++ b/news.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7798465150283735"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playzone - Latest Gaming News</title>
@@ -1076,6 +1078,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 </div>
                 <h2 class="text-2xl md:text-3xl font-bold mb-2">Stay Updated with Playzonejk</h2>
                 <p class="text-gray
+
 
 
 
