--- a/require2.html
+++ b/require2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7798465150283735"
+     crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Search Portal</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -237,4 +239,5 @@
 </html>
 
                        
+
 
