--- a/guide.html
+++ b/guide.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC Game Setup Guide for Laptops</title>
+    <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&display=swap');
@@ -754,6 +755,7 @@
     </script>
 </body>
 </html>
+
 
 
 
