--- a/news.html
+++ b/news.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playzone - Latest Gaming News</title>
+    <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700&family=Space+Grotesk:wght@400;500;700&display=swap');
@@ -1078,6 +1079,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 </div>
                 <h2 class="text-2xl md:text-3xl font-bold mb-2">Stay Updated with Playzonejk</h2>
                 <p class="text-gray
+
 
 
 
