--- a/require2.html
+++ b/require2.html
@@ -5,6 +5,7 @@
      crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Search Portal</title>
+    <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .game-card {
@@ -239,5 +240,6 @@
 </html>
 
                        
+
 
 
